[gd_scene load_steps=10 format=3 uid="uid://drsm1g2yx3hwl"]

[ext_resource type="Texture2D" uid="uid://b3xc0j0y51jnf" path="res://sprites/paper/textBox.png" id="1_63145"]
[ext_resource type="Script" path="res://scripts/world/dialogueBox.gd" id="1_u7gxn"]
[ext_resource type="Texture2D" uid="uid://bi5p03dnh4gmp" path="res://sprites/characters/EllieHead.png" id="2_t6lj7"]
[ext_resource type="Texture2D" uid="uid://cyctsu8dta2ij" path="res://sprites/paper/stampHuge.png" id="3_sew0t"]
[ext_resource type="FontVariation" uid="uid://b5hfv1r25ku65" path="res://assets/fonts/MyBestFont.tres" id="4_unmdb"]

[sub_resource type="Animation" id="Animation_xfili"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_jrgrm"]
resource_name = "slideIn"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 128), Vector2(0, 72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_md0vq"]
resource_name = "slideOut"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 72), Vector2(0, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fese"]
_data = {
"RESET": SubResource("Animation_xfili"),
"slideIn": SubResource("Animation_jrgrm"),
"slideOut": SubResource("Animation_md0vq")
}

[node name="Dialogue Box" type="Node2D"]
visible = false
texture_filter = 1
position = Vector2(0, 128)
script = ExtResource("1_u7gxn")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.196078)
position = Vector2(2, 2)
texture = ExtResource("1_63145")

[node name="TextBox" type="Sprite2D" parent="."]
texture = ExtResource("1_63145")

[node name="SpeakerShadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.196078)
position = Vector2(-103, 1)
texture = ExtResource("2_t6lj7")

[node name="Speaker" type="Sprite2D" parent="."]
position = Vector2(-104, 0)
texture = ExtResource("2_t6lj7")

[node name="FirstTextStampShadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.196078)
position = Vector2(25, 1)
texture = ExtResource("3_sew0t")
hframes = 4

[node name="FirstTextStamp" type="Sprite2D" parent="."]
position = Vector2(24, 0)
texture = ExtResource("3_sew0t")
hframes = 4

[node name="Label" type="Label" parent="FirstTextStamp"]
offset_left = -98.0
offset_top = -15.0
offset_right = 98.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_unmdb")
text = "TextTextTextTextTextTextTextTextTextTextTextTextTextTextTextText"
autowrap_mode = 3
max_lines_visible = 2

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3fese")
}
